UPDATE 0.2: create classes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
     <title>Zoom</title>
 </head>
 <body>
+    <div class="container">
+        <div class="upper-bar">
+            <div class="speaker-view"></div>
+            <div class="close"></div>
+        </div>
+        <div class="call-partecipant"></div>
+        <div class="bottom-bar">
+            <div class="left"></div>
+            <div class="center"></div>
+            <div class="right"></div>
+        </div>
+    </div>
     
 </body>
 </html>
