INSERT PHOTO USER

--- a/index.html
+++ b/index.html
@@ -11,15 +11,135 @@
     <div class="container">
         <div class="upper-bar">
             <div class="speaker-view"></div>
-            <div class="close"></div>
+            <div class="maximize"><i class="fa-solid fa-maximize"></i></div>
         </div>
-        <div class="call-partecipant"></div>
+        <div class="call-participant">
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+            <div class="participant">
+                <img src="img/sirius-black.jpg" alt="">
+            </div>
+        </div>
         <div class="bottom-bar">
-            <div class="left"></div>
-            <div class="center"></div>
+            <div class="left">
+                <i class="fa-solid fa-microphone"></i>
+                <i class="fa-solid fa-video"></i>
+            </div>
+            <div class="center">
+                <i class="fa-solid fa-user-plus"></i>
+                <i class="fa-solid fa-user-group"></i>
+                <i class="fa-solid fa-chart-column"></i>
+                <i class="fa-solid fa-share-from-square" style="color: #4bc800;"></i>
+                <i class="fa-solid fa-comment"></i>
+                <i class="fa-solid fa-record-vinyl"></i>
+                <i class="fa-brands fa-microsoft"></i>
+                <i class="fa-solid fa-ellipsis"></i>
+            </div>
             <div class="right"></div>
         </div>
     </div>
     
 </body>
 </html>
+
+
