--- a/index.html
+++ b/index.html
@@ -122,8 +122,14 @@
         </div>
         <div class="bottom-bar">
             <div class="left">
-                <i class="fa-solid fa-microphone"></i>
-                <i class="fa-solid fa-video"></i>
+                <div class="microphone">
+                    <i class="fa-solid fa-microphone"></i>
+                    <div>Mute</div>
+                </div>
+                <div class="video">
+                    <i class="fa-solid fa-video"></i>
+                    <div>Stop Video</div>
+                </div>
             </div>
             <div class="center">
                 <i class="fa-solid fa-user-plus"></i>
