--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/style.css">
     <title>Zoom</title>
 </head>
@@ -15,133 +18,299 @@
         </div>
         <div class="call-participant">
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img1.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Wash Crane
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img2.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Cynthia Boartusk
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img3.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Celia Crabapple
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img4.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Annis Cribbe
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img5.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Bee Mole
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img6.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Carleton Owlet
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img7.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Nova Yowie
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img8.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Horizon Biscus
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img9.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Ford Hearth
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img10.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Geo Beaverdam
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img11.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Shirley Gosling
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img12.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Geo Cribbe
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img13.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Columbus Barrows
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img14.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Benjaman Leon
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img15.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Ulysses Buckling
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img16.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Marcella Gulls
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img17.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Catalina Cups
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img18.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Melba Cross
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img19.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Macie Gorgon
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img20.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Rosina Lillypilly
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img21.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Fuchsia Draguar
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img22.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Birtie Gears
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img23.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Vale Raywood
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img24.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Bayou Blackjack
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img25.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Olga Leveret
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img26.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Loris Galleana
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img27.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Calder Corals
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img28.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Larkin Hare
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img29.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Haywood Conifer
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img30.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Leaf Sweets
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img31.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Newman Light
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img32.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Waverly Bunyip
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img33.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Martha Sow
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img34.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Carey Robin
+                </div>
             </div>
             <div class="participant">
-                <img src="img/sirius-black.jpg" alt="">
+                <img src="img/img35.jpg" alt="">
+                <div class="user">
+                    <i class="fa-solid fa-microphone-slash"></i>
+                    Otho Bitterwood
+                </div>
             </div>
         </div>
         <div class="bottom-bar">
             <div class="left">
-                <div class="microphone">
-                    <i class="fa-solid fa-microphone"></i>
+                <div class="icon">
+                    <a href="#"><i class="fa-solid fa-microphone"></i></a>
                     <div>Mute</div>
                 </div>
-                <div class="video">
-                    <i class="fa-solid fa-video"></i>
+                <div class="icon">
+                    <a href="#"><i class="fa-solid fa-video"></i></a>
                     <div>Stop Video</div>
                 </div>
             </div>
             <div class="center">
-                <i class="fa-solid fa-user-plus"></i>
-                <i class="fa-solid fa-user-group"></i>
-                <i class="fa-solid fa-chart-column"></i>
-                <i class="fa-solid fa-share-from-square" style="color: #4bc800;"></i>
-                <i class="fa-solid fa-comment"></i>
-                <i class="fa-solid fa-record-vinyl"></i>
-                <i class="fa-brands fa-microsoft"></i>
-                <i class="fa-solid fa-ellipsis"></i>
+                <div class="icon">
+                    <a href="#"><i class="fa-solid fa-user-plus"></i></a>
+                    <div>Invite</div>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fa-solid fa-user-group"></i></a>
+                    <div>Manage Participants</div>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fa-solid fa-chart-column"></i></a>
+                    <div>Polling</div>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fa-solid fa-share-from-square" style="color: #4bc800;"></i></a>
+                    <div>Share Screen</div>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fa-solid fa-comment"></i></a>
+                    <div>Chat</div>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fa-solid fa-record-vinyl"></i></a>
+                    <div>Record</div>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fa-brands fa-microsoft"></i></a>
+                    <div>Breakout Rooms</div>
+                </div>
+                <div class="icon">
+                    <a href="#"><i class="fa-solid fa-ellipsis"></i></a>
+                    <div>Moore</div>
+                </div>
             </div>
-            <div class="right"></div>
+            <div class="right">
+                End meeting
+            </div>
         </div>
     </div>
     
