--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 <body>
     <div class="container">
         <div class="upper-bar">
-            <div class="speaker-view"></div>
-            <div class="maximize"><i class="fa-solid fa-maximize"></i></div>
+            <div class="upper-right">
+                <div class="speaker-view"><img src="img/grid-1526-svgrepo-com.svg" alt="">Speaker View</div>
+                <div class="maximize"><i class="fa-solid fa-maximize"></i></div>
+            </div>
+            
         </div>
         <div class="call-participant">
             <div class="participant">
@@ -262,9 +265,10 @@
                     Otho Bitterwood
                 </div>
             </div>
+            </div>
         </div>
         <div class="bottom-bar">
-            <div class="left">
+            <div class="bottom-left">
                 <div class="icon">
                     <a href="#"><i class="fa-solid fa-microphone"></i></a>
                     <div>Mute</div>
@@ -274,7 +278,7 @@
                     <div>Stop Video</div>
                 </div>
             </div>
-            <div class="center">
+            <div class="bottom-center">
                 <div class="icon">
                     <a href="#"><i class="fa-solid fa-user-plus"></i></a>
                     <div>Invite</div>
@@ -308,8 +312,8 @@
                     <div>Moore</div>
                 </div>
             </div>
-            <div class="right">
-                End meeting
+            <div class="bottom-right">
+                <a href="#">End meeting</a>
             </div>
         </div>
     </div>
