--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
@@ -14,10 +14,14 @@
     <div class="container">
         <div class="upper-bar">
             <div class="upper-right">
-                <div class="speaker-view"><img src="img/grid-1526-svgrepo-com.svg" alt="">Speaker View</div>
-                <div class="maximize"><i class="fa-solid fa-maximize"></i></div>
-            </div>
-            
+                <div class="speaker-view">
+                    <img src="img/grid-1526-svgrepo-com.svg" alt="">
+                    Speaker View
+                </div>
+                <div class="maximize">
+                    <i class="fa-solid fa-maximize"></i>
+                </div>
+            </div>          
         </div>
         <div class="call-participant">
             <div class="participant">
@@ -264,8 +268,7 @@
                     <i class="fa-solid fa-microphone-slash"></i>
                     Otho Bitterwood
                 </div>
-            </div>
-            </div>
+            </div>            
         </div>
         <div class="bottom-bar">
             <div class="bottom-left">
@@ -317,7 +320,6 @@
             </div>
         </div>
     </div>
-    
 </body>
 </html>
 
